testsuite/tests/typecheck/should_fail/tcfail007.hs
module ShouldFail where

n x | True = x+1
    | False = True
