testsuite/tests/typecheck/should_fail/tcfail007.stderr

tcfail007.hs:3:15: error:
    • No instance for (Num Bool) required by a use of ‘+’
    • In the expression: x + 1
      In an equation for ‘n’:
          n x
            | True = x + 1
            | False = True
